--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ scikit_learn==1.1.1
 uvicorn
 # Add to requirements.txt
 rich==12.4.4
-pre-commit==3.3.2
 mlflow==2.3.2
+mkdocs==1.3.0
+mkdocstrings==0.18.1
+# Add to requirements.txt
+typer==0.4.1
