--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,13 @@ numpy==1.23.0
 pandas==1.4.3
 pydantic==1.9.1
 scikit_learn==1.1.1
-uvicorn
+uvicorn==0.17.6
+# Add to requirements.txt
+rich==12.4.4
+mlflow==2.3.2
+mkdocs==1.3.0
+mkdocstrings==0.18.1
+# Add to requirements.txt
+typer==0.4.1
+# Add to requirements.txt
+fastapi==0.78.0
